button updates, smaller fixes

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                             <h1>bok, <span>bok.</span></h1>
                         </div>
                         <div class="title-desc">
-                            <p><strong>bok, bok.*</strong> is the portfolio of Katarina Dijaković, a digital designer from Croatia.</p>
+                            <p><strong>bok, bok.*</strong> is the portfolio of Katarina Dijakovic, a digital designer from Croatia.</p>
                             <p>I believe in making data-based decisions, in-depth problem solving, the value of aesthetics and the importance of quality communication.</p>
                             <p class="text-small explanation">*bok is the Croatian word for hello!</p>
                         </div>
-                        <div class="button-main">Get in touch</div>
+                        <a href="mailto:test@test.com" class="button-main">Get in touch</a>
                     </div>
                 </div>
             </header>
@@ -173,7 +173,7 @@
                                 <p class="text-small">UI/UX Designer</p>
                                 <p class="text-small">Jun 2016 – Jun 2017</p>
                                 <p class="desc">Creating a user interface based on in-depth knowledge of the business and its customers needs through a human centered approach and design thinking principles.</p>
-                                <div class="button-main">View The Project</div>
+                                <a href="#" class="button-main">View The Project</a>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                                <p class="text-small">UI/UX Designer</p>
                                <p class="text-small">Apr 2018 – May 2018</p>
                                <p class="desc">A design process that includes exploring all user entry points and plausible solutions to build a user interface reflecting optimal usability.</p>
-                               <div class="button-main">View The Project</div>
+                               <a href="#" class="button-main">View The Project</a>
                            </div>
                        </div>
                     </div>
@@ -206,10 +206,10 @@
                         <div class="work-info">
                             <div class="work-info-wrapper">
                                 <h3>The UI</h3>
-                                <p class="text-small">UI/UX Designer</p>
+                                <p class="text-small">UI/UX Designer/Project Manager</p>
                                 <p class="text-small">Mar 2017 – May 2017</p>
                                 <p class="desc">Creating a user interface and a design system through an atomic design approach to support a new online store solution.</p>
-                                <div class="button-main">View The Project</div>
+                                <a href="#" class="button-main">View The Project</a>
                             </div>
                         </div>
                     </div>
@@ -226,8 +226,8 @@
                                 <h3>The Brand</h3>
                                 <p class="text-small">Art Direction/Brand Designer</p>
                                 <p class="text-small">Mar 2016 – May 2016</p>
-                                <p class="desc">CDesigning a brand identity guidelines for online and offline presence through a book of graphic standards and various applications.</p>
-                                <div class="button-main">View The Project</div>
+                                <p class="desc">Designing a brand identity guidelines for online and offline presence through a book of graphic standards and various applications.</p>
+                                <a href="#" class="button-main">View The Project</a>
                             </div>
                         </div>
                     </div>
@@ -290,7 +290,7 @@
                         <a href="#" class="logo"></a>
                         <p class="title">bok, bok.</p>
                         <p class="title-goodbye">*bok is also the Croatian word for goodbye!</p>
-                        <div class="button-main">Get in touch</div>
+                        <a href="#" class="button-main">Get in touch</a>
                         <ul class="menu">
                             <li><a href="#experience">Experience</a></li>
                             <li><a href="#work">Work</a></li>
