removed not needed css, js to jquery, links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css?v=130918">
+        <title>bok, bok.</title>
     </head>
     <body id="body">
         <div class="body-wrapper">
@@ -21,11 +22,11 @@
                                 <li><a href="#articles">Articles</a></li>
                             </ul>
                             <ul class="social">
-                                <li><a href="#"><span>LinkedIn</span>e</a></li>
-                                <li><a href="#"><span>Behance</span>c</a></li>
-                                <li><a href="#"><span>Dribbble</span>d</a></li>
-                                <li><a href="#"><span>Instagram</span>a</a></li>
-                                <li><a href="#"><span>Twitter</span>b</a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/katarinadijakovic"><span>LinkedIn</span>e</a></li>
+                                <li><a target="_blank" href="https://www.behance.net/kdijakovic"><span>Behance</span>c</a></li>
+                                <li><a target="_blank" href="https://dribbble.com/katarinadijakovic"><span>Dribbble</span>d</a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/kdijakovic"><span>Instagram</span>a</a></li>
+                                <li><a target="_blank" href="https://twitter.com/kdijakovic"><span>Twitter</span>b</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -42,7 +43,7 @@
                             <p>I believe in making data-based decisions, in-depth problem solving, the value of aesthetics and the importance of quality communication.</p>
                             <p class="text-small explanation">*bok is the Croatian word for hello!</p>
                         </div>
-                        <a href="mailto:test@test.com" class="button-main">Get in touch</a>
+                        <a class="button-main mailto" data-href="a2F0YXJpbmEuZGlnaXRhbC5oZWxsbw==">Get in touch</a>
                     </div>
                 </div>
             </header>
@@ -97,7 +98,7 @@
                                     <p class="duration">1 yr 10 mo</p>
                                 </div>
                                 <div class="info">
-                                    <p>Ypsilon video production & marketing agency</p>
+                                    <p>Carobni tim</p>
                                     <h4>Graphic Designer & Print Specialist</h4>
                                     <p>Osijek, Croatia</p>
                                 </div>
@@ -173,7 +174,7 @@
                                 <p class="text-small">UI/UX Designer</p>
                                 <p class="text-small">Jun 2016 – Jun 2017</p>
                                 <p class="desc">Creating a user interface based on in-depth knowledge of the business and its customers needs through a human centered approach and design thinking principles.</p>
-                                <a href="#" class="button-main">View The Project</a>
+                                <a target="_blank" href="https://www.behance.net/gallery/70141105/A-user-centered-design-process-of-an-online-store" class="button-main">View The Project</a>
                             </div>
                         </div>
                     </div>
@@ -191,7 +192,7 @@
                                <p class="text-small">UI/UX Designer</p>
                                <p class="text-small">Apr 2018 – May 2018</p>
                                <p class="desc">A design process that includes exploring all user entry points and plausible solutions to build a user interface reflecting optimal usability.</p>
-                               <a href="#" class="button-main">View The Project</a>
+                               <a target="_blank" href="https://www.behance.net/gallery/65568135/Aloha-Surfboards-Order-status-and-tracking" class="button-main">View The Project</a>
                            </div>
                        </div>
                     </div>
@@ -209,7 +210,7 @@
                                 <p class="text-small">UI/UX Designer/Project Manager</p>
                                 <p class="text-small">Mar 2017 – May 2017</p>
                                 <p class="desc">Creating a user interface and a design system through an atomic design approach to support a new online store solution.</p>
-                                <a href="#" class="button-main">View The Project</a>
+                                <a target="_blank" href="https://www.behance.net/gallery/63855951/Pavement-Ends-online-store-design" class="button-main">View The Project</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +228,7 @@
                                 <p class="text-small">Art Direction/Brand Designer</p>
                                 <p class="text-small">Mar 2016 – May 2016</p>
                                 <p class="desc">Designing a brand identity guidelines for online and offline presence through a book of graphic standards and various applications.</p>
-                                <a href="#" class="button-main">View The Project</a>
+                                <a target="_blank" href="https://www.behance.net/gallery/64468189/Brand-identity-guidelines-TableTennis11" class="button-main">View The Project</a>
                             </div>
                         </div>
                     </div>
@@ -290,7 +291,7 @@
                         <a href="#" class="logo"></a>
                         <p class="title">bok, bok.</p>
                         <p class="title-goodbye">*bok is also the Croatian word for goodbye!</p>
-                        <a href="#" class="button-main">Get in touch</a>
+                        <a class="button-main mailto" data-href="a2F0YXJpbmEuZGlnaXRhbC5oZWxsbw==">Get in touch</a>
                         <ul class="menu">
                             <li><a href="#experience">Experience</a></li>
                             <li><a href="#work">Work</a></li>
@@ -298,80 +299,17 @@
                             <li><a href="#articles">Articles</a></li>
                         </ul>
                         <ul class="social">
-                            <li><a href="#"><span>LinkedIn</span>e</a></li>
-                            <li><a href="#"><span>Behance</span>c</a></li>
-                            <li><a href="#"><span>Dribbble</span>d</a></li>
-                            <li><a href="#"><span>Instagram</span>a</a></li>
-                            <li><a href="#"><span>Twitter</span>b</a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/katarinadijakovic"><span>LinkedIn</span>e</a></li>
+                            <li><a target="_blank" href="https://www.behance.net/kdijakovic"><span>Behance</span>c</a></li>
+                            <li><a target="_blank" href="https://dribbble.com/katarinadijakovic"><span>Dribbble</span>d</a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/kdijakovic"><span>Instagram</span>a</a></li>
+                            <li><a target="_blank" href="https://twitter.com/kdijakovic"><span>Twitter</span>b</a></li>
                         </ul>
                     </div>
                 </div>
             </footer>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="assets/scripts/main.js?v=130918"></script>
     </body>
 </html>
-<script>
-    // Navigation
-    var nav = document.getElementById('nav');
-    var openMenu = document.getElementById('menu-open');
-    var closeMenu = document.getElementById('menu-close');
-    var overlay = document.getElementById('nav-overlay');
-
-    openMenu.addEventListener('click', openNav);
-    closeMenu.addEventListener('click', closeNav);
-    overlay.addEventListener('click', closeNav);
-
-    function openNav(event) {
-        nav.classList.add('active');
-        overlay.classList.add('active');
-        event.preventDefault();
-    }
-
-    function closeNav(event) {
-        nav.classList.remove('active');
-        overlay.classList.remove('active');
-        event.preventDefault();
-    }
-
-    // Sticky header
-    window.onscroll = function() { scrollNav() };
-
-    function scrollNav() {
-        if (window.pageYOffset > 100) {
-            nav.classList.add("fixed");
-        } else {
-            nav.classList.remove("fixed");
-        }
-    }
-
-
-    // Anchors
-    var links = document.getElementsByTagName('a');
-
-    Array.prototype.slice.call(links).forEach(function(el) {
-        if (!el.hash && el.href != window.origin + "/#") {
-            return;
-        }
-
-        el.onclick = function(event) {
-            closeNav(event);
-
-            let offset = 0;
-            let elId = this.hash.replace('#','');
-
-            if (elId) {
-                offset = document.getElementById(elId).offsetTop;
-                history.pushState(null, null, '#' + elId);
-            } else {
-                history.pushState(null, null, window.origin);
-            }
-
-            window.scroll({
-                top: offset,
-                left: 0,
-                behavior: 'smooth'
-            });
-            event.preventDefault();
-        };
-    });
-</script>
