favicon, apple icons, content updated, updated images, css fixes, links

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+        <title>bok, bok. - Design portfolio of Katarina Dijakovic</title>
         <link rel="stylesheet" href="assets/css/style.css?v=130918">
-        <title>bok, bok.</title>
+        <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+        <link rel="apple-touch-icon" href="assets/icons/apple-57.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-72.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-114.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-144.png">
     </head>
     <body id="body">
         <div class="body-wrapper">
@@ -25,7 +30,7 @@
                                 <li><a target="_blank" href="https://www.linkedin.com/in/katarinadijakovic"><span>LinkedIn</span>e</a></li>
                                 <li><a target="_blank" href="https://www.behance.net/kdijakovic"><span>Behance</span>c</a></li>
                                 <li><a target="_blank" href="https://dribbble.com/katarinadijakovic"><span>Dribbble</span>d</a></li>
-                                <li><a target="_blank" href="https://www.instagram.com/kdijakovic"><span>Instagram</span>a</a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/kdijakovic/"><span>Instagram</span>a</a></li>
                                 <li><a target="_blank" href="https://twitter.com/kdijakovic"><span>Twitter</span>b</a></li>
                             </ul>
                         </div>
@@ -51,7 +56,7 @@
             <section id="experience">
                 <div class="container">
                     <h2>Experience</h2>
-                    <p class="intro">As a designer I'm focused on human centered design and quality user experiences that are reflected through beautiful user intefaces and great usability. My roots are in print, typography, graphic technology and branding.</p>
+                    <p class="intro">As a designer I'm focused on human-centered design and quality user experiences that are reflected through beautiful user interfaces and great usability. My roots are in print, typography, graphics technology and branding.</p>
                     <div class="timeline-container">
                         <div class="groups">
                             <p class="work-group">Work & Education</p>
@@ -78,7 +83,7 @@
                                     <div class="tag tag-award">Award</div>
                                     <p>First place award, Ministry of Justice, Croatia</p>
                                     <h4>Print campaign promoting minority language use before judicial authorities</h4>
-                                    <p>Osijek, Croatia</p>
+                                    <p class="location">Osijek, Croatia</p>
                                 </div>
                             </li>
                             <li class="left">
@@ -89,7 +94,7 @@
                                 <div class="info">
                                     <p>Ypsilon video production & marketing agency</p>
                                     <h4>Graphic & Web Designer</h4>
-                                    <p>Osijek, Croatia</p>
+                                    <p class="location">Osijek, Croatia</p>
                                 </div>
                             </li>
                             <li class="left timeline-space">
@@ -100,7 +105,7 @@
                                 <div class="info">
                                     <p>Carobni tim</p>
                                     <h4>Graphic Designer & Print Specialist</h4>
-                                    <p>Osijek, Croatia</p>
+                                    <p class="location">Osijek, Croatia</p>
                                 </div>
                             </li>
                             <li class="right">
@@ -111,7 +116,7 @@
                                     <div class="tag tag-award">Award</div>
                                     <p>First place award, City of Osijek, Croatia</p>
                                     <h4>Visual identity for the city of Osijek, Croatia (candidate for the European culture capital 2020)</h4>
-                                    <p>Osijek, Croatia</p>
+                                    <p class="location">Osijek, Croatia</p>
                                 </div>
                             </li>
                             <li class="left">
@@ -122,7 +127,7 @@
                                 <div class="info">
                                     <p>Inchoo - full service ecommerce agency</p>
                                     <h4>Senior UI/UX Designer</h4>
-                                    <p>Osijek, Croatia</p>
+                                    <p class="location">Osijek, Croatia</p>
                                 </div>
                             </li>
                             <li class="right">
@@ -134,7 +139,7 @@
                                     <div class="tag tag-community">Community</div>
                                     <p>Osijek Software City</p>
                                     <h4>Team Lead for Design Talks</h4>
-                                    <p>Osijek, Croatia</p>
+                                    <p class="location">Osijek, Croatia</p>
                                 </div>
                             </li>
                             <li class="right timeline-space">
@@ -145,13 +150,25 @@
                                     <div class="tag tag-certificate">Certificate</div>
                                     <p>Magento U</p>
                                     <h4>Magento Certified Solution Specialist</h4>
-                                    <a href="#" class="button-link">View Certificate</a>
+                                    <a target="_blank" href="https://u.magento.com/certification/directory/dev/2483076" class="button-link">View Certificate</a>
+                                </div>
+                            </li>
+                            <li class="right timeline-space">
+                                <div class="time">
+                                    <p class="year-range"><strong>2018</strong></p>
+                                </div>
+                                <div class="info">
+                                    <div class="tag tag-community">Community</div>
+                                    <p>Meet Magento Croatia 2018 - Speaker</p>
+                                    <h4>ROI of Design</h4>
+                                    <p class="location">Osijek, Croatia</p>
+                                    <a target="_blank" href="https://hr.meet-magento.com/en/speaker/katarina-dijakovic" class="button-link">View Details</a>
                                 </div>
                             </li>
                         </ul>
                     </div>
                     <div class="more">
-                        <p>There are even more details to this timeline. More competencies and projects can be seen on my Linkedin profile below.</p>
+                        <p>There are even more details to this timeline. More competencies and daily responsibilities can be seen on my LinkedIn profile below.</p>
                         <a href="https://www.linkedin.com/in/katarinadijakovic" target="_blank" class="button-ghost">View LinkedIn Profile</a>
                     </div>
                 </div>
@@ -163,17 +180,19 @@
                     <div class="work work-left shape-circle-left">
                         <div class="work-screen">
                             <picture>
-                                <source media="(max-width: 700px)" srcset="assets/projects/design-process.png">
-                                <img src="assets/projects/design-process.png" alt="The design process">
+                                <source media="(max-width: 1024px)" srcset="assets/projects/design-process.png">
+                                <img src="assets/projects/design-process-hd.png" alt="The design process">
                             </picture>
                             <div class="shape-back"></div>
                         </div>
                         <div class="work-info">
                             <div class="work-info-wrapper">
                                 <h3>The Design Process</h3>
-                                <p class="text-small">UI/UX Designer</p>
-                                <p class="text-small">Jun 2016 – Jun 2017</p>
-                                <p class="desc">Creating a user interface based on in-depth knowledge of the business and its customers needs through a human centered approach and design thinking principles.</p>
+                                <div class="work-details">
+                                    <p>UI/UX Designer</p>
+                                    <p>Jun 2016 – Jun 2017</p>
+                                </div>
+                                <p class="desc">Creating a user interface based on in-depth knowledge of the business and its customer's needs through a human-centered approach and design thinking principles.</p>
                                 <a target="_blank" href="https://www.behance.net/gallery/70141105/A-user-centered-design-process-of-an-online-store" class="button-main">View The Project</a>
                             </div>
                         </div>
@@ -181,16 +200,18 @@
                     <div class="work work-right shape-square">
                         <div class="work-screen">
                             <picture>
-                                <source media="(max-width: 700px)" srcset="assets/projects/ux.png">
-                                <img src="assets/projects/ux.png" alt="The UX">
+                                <source media="(max-width: 1024px)" srcset="assets/projects/ux.png">
+                                <img src="assets/projects/ux-hd.png" alt="The UX">
                             </picture>
                             <div class="shape-back"></div>
                         </div>
                        <div class="work-info">
                            <div class="work-info-wrapper">
                                <h3>The UX</h3>
-                               <p class="text-small">UI/UX Designer</p>
-                               <p class="text-small">Apr 2018 – May 2018</p>
+                               <div class="work-details">
+                                   <p>UI/UX Designer</p>
+                                   <p>Apr 2018 – May 2018</p>
+                               </div>
                                <p class="desc">A design process that includes exploring all user entry points and plausible solutions to build a user interface reflecting optimal usability.</p>
                                <a target="_blank" href="https://www.behance.net/gallery/65568135/Aloha-Surfboards-Order-status-and-tracking" class="button-main">View The Project</a>
                            </div>
@@ -199,16 +220,18 @@
                     <div class="work work-left shape-line">
                         <div class="work-screen">
                             <picture>
-                                <source media="(max-width: 700px)" srcset="assets/projects/ui.png">
-                                <img src="assets/projects/ui.png" alt="The UI">
+                                <source media="(max-width: 1024px)" srcset="assets/projects/ui.png">
+                                <img src="assets/projects/ui-hd.png" alt="The UI">
                             </picture>
                             <div class="shape-back"></div>
                         </div>
                         <div class="work-info">
                             <div class="work-info-wrapper">
                                 <h3>The UI</h3>
-                                <p class="text-small">UI/UX Designer/Project Manager</p>
-                                <p class="text-small">Mar 2017 – May 2017</p>
+                                <div class="work-details">
+                                    <p>UI/UX Designer/Project Manager</p>
+                                    <p>Mar 2017 – May 2017</p>
+                                </div>
                                 <p class="desc">Creating a user interface and a design system through an atomic design approach to support a new online store solution.</p>
                                 <a target="_blank" href="https://www.behance.net/gallery/63855951/Pavement-Ends-online-store-design" class="button-main">View The Project</a>
                             </div>
@@ -217,17 +240,19 @@
                     <div class="work work-right shape-circle-right">
                         <div class="work-screen">
                             <picture>
-                                <source media="(max-width: 700px)" srcset="assets/projects/brand.png">
-                                <img src="assets/projects/brand.png" alt="The brand">
+                                <source media="(max-width: 1024px)" srcset="assets/projects/brand.png">
+                                <img src="assets/projects/brand-hd.png" alt="The brand">
                             </picture>
                             <div class="shape-back"></div>
                         </div>
                         <div class="work-info">
                             <div class="work-info-wrapper">
                                 <h3>The Brand</h3>
-                                <p class="text-small">Art Direction/Brand Designer</p>
-                                <p class="text-small">Mar 2016 – May 2016</p>
-                                <p class="desc">Designing a brand identity guidelines for online and offline presence through a book of graphic standards and various applications.</p>
+                                <div class="work-details">
+                                    <p>Art Direction/Brand Designer</p>
+                                    <p>Mar 2016 – May 2016</p>
+                                </div>
+                                <p class="desc">Designing brand identity guidelines for online and offline presence through a book of graphic standards and various applications.</p>
                                 <a target="_blank" href="https://www.behance.net/gallery/64468189/Brand-identity-guidelines-TableTennis11" class="button-main">View The Project</a>
                             </div>
                         </div>
@@ -255,7 +280,7 @@
             <section id="articles">
                 <div class="container">
                     <h2>Articles</h2>
-                    <p class="intro">You know what they say - quality over quantity. Even though there were many projects, these ones are a good example of the type of work and dedication done consistently.</p>
+                    <p class="intro">A few articles on different work methods and experiences in using different design tools</p>
                     <div class="article-wrapper">
                         <article class="featured-article full-width">
                             <h3><a href="#">The process of improving online store usability and design your customers will enjoy</a></h3>
@@ -265,20 +290,20 @@
                         <ul class="article-list">
                             <li>
                                 <article>
-                                    <h3><a href="#">Version control systems in UI design</a></h3>
-                                    <p class="article-intro">Symbols work great for single-player, single-file mode, libraries are more multi-player, multi-file kind of situation, but what about multi-player, single-file scenario?</p>
+                                    <h4><a href="#">Version control systems in UI design</a></h4>
+                                    <p class="article-intro">1. What works in a multi-player, single-file scenario? Symbols, libraries or version control systems?</p>
                                 </article>
                             </li>
                             <li>
                                 <article>
-                                    <h3><a href="#">Wireframing a successful design for your online store</a></h3>
-                                    <p class="article-intro">We never just dive into design and bask in the glory of amazing typography and brilliant color schemes because without the phases that precede it – it just wouldn't even begin to be possible.</p>
+                                    <h4><a href="#">Wireframing a successful design for your online store</a></h4>
+                                    <p class="article-intro">Wireframes are the ones that enable us to focus on glorious typography and brilliant color schemes.</p>
                                 </article>
                             </li>
                             <li>
                                 <article>
-                                    <h3><a href="#">The practical value of Design Thinking</a></h3>
-                                    <p class="article-intro">Understanding the end user is what this thinking perspective is all about. A far cry from mere visual creation of various design elements.</p>
+                                    <h4><a href="#">The practical value of Design Thinking</a></h4>
+                                    <p class="article-intro">The end user is what this thinking perspective is all about. A far cry from the mere visual creation of design elements.</p>
                                 </article>
                             </li>
                         </ul>
@@ -302,7 +327,7 @@
                             <li><a target="_blank" href="https://www.linkedin.com/in/katarinadijakovic"><span>LinkedIn</span>e</a></li>
                             <li><a target="_blank" href="https://www.behance.net/kdijakovic"><span>Behance</span>c</a></li>
                             <li><a target="_blank" href="https://dribbble.com/katarinadijakovic"><span>Dribbble</span>d</a></li>
-                            <li><a target="_blank" href="https://www.instagram.com/kdijakovic"><span>Instagram</span>a</a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/kdijakovic/"><span>Instagram</span>a</a></li>
                             <li><a target="_blank" href="https://twitter.com/kdijakovic"><span>Twitter</span>b</a></li>
                         </ul>
                     </div>
